# ResearchOS

./: .gitignore  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  deep-research-report.md
backend/: .env.example  app.py  pyproject.toml
backend/agents/: __init__.py  base.py  experiment_designer.py  gap_analyzer.py  literature_reviewer.py  llm.py  model_researcher.py  prompts.py
backend/migrations/: 001_init.sql  002_add_paper_urls.sql  002_library_id.sql  003_add_links.sql  003_auto_notes.sql  003_notes.sql  004_chat_messages.sql  004_website_notes.sql  005_paper_texts.sql  006_chat_suggestions.sql  007_website_chat.sql  008_paper_published_date.sql  009_authors.sql  010_github_repos.sql  011_github_repo_notes_chat.sql  012_library_notes.sql  013_notes_copilot_history.sql  014_pin_notes.sql  015_projects.sql  016_project_notes.sql  017_research_questions.sql  018_project_github_repos.sql  019_experiments.sql  020_project_notes_copilot.sql  021_task_database.sql  schema.sql
backend/models/: activity.py  author.py  chat.py  collection.py  discovery.py  experiment.py  gap_suggestion.py  github_repo.py  library.py  note.py  paper.py  project.py  project_paper.py  proposal.py  research_question.py  run.py  task.py  website.py  workflow.py
backend/routers/: activity.py  authors.py  batch.py  chat.py  collections.py  experiments.py  gap_analysis.py  github_repos.py  libraries.py  notes.py  notes_copilot.py  papers.py  project_notes_copilot.py  projects.py  proposals.py  research_questions.py  runs.py  search.py  settings.py  (+4 more)
(+363 files in other folders)
