[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.0",
    "httpx>=0.27.0",
    "pydantic-ai>=1.63.0",
    "uvicorn[standard]>=0.32",
    "python-multipart>=0.0.12",
    "python-dotenv>=1.0",
    "supabase>=2.28.0",
    "pymupdf>=1.27.1",
    "docling-core>=2.67.1",
    "pymupdf4llm>=0.3.4",
    "bibtexparser>=2.0.0b7",
    "pyyaml>=6.0",
    "umap-learn>=0.5.7",
    "numpy>=1.24",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "pytest-mock>=3.14.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
